# lidar_global_localisation

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md
data/octomap_clouds/: cmd_line.txt
data/octomap_clouds/global/: 1719225099.278907778.pcd  1719225104.312348295.pcd  1719225109.335113631.pcd  1719225114.354567715.pcd
data/octomap_clouds/local/: 1719225090.289763233.pcd  1719225091.307611399.pcd  1719225092.288999428.pcd  1719225093.299876511.pcd  1719225094.283996138.pcd  1719225095.272472240.pcd  1719225096.277324103.pcd  1719225097.296828774.pcd  1719225098.294782351.pcd  1719225099.332495729.pcd  1719225100.305543985.pcd  1719225101.319591255.pcd  1719225102.313318476.pcd  1719225103.317788740.pcd  1719225104.329504054.pcd  1719225105.333516935.pcd  1719225106.317573126.pcd  1719225107.315125377.pcd  1719225108.316318499.pcd  1719225109.326699343.pcd  1719225110.325467587.pcd  1719225111.325564524.pcd  1719225112.326568246.pcd  1719225113.322483378.pcd  1719225114.324000835.pcd  1719225115.306947532.pcd  1719225116.300970335.pcd  (+203 more)
map_closures_cpp/: .CMakeLists.txt.swp
map_closures_cpp/map_closures/: .AlignRansac2D.hpp.swp  .DensityMap.cpp.swp  .DensityMap.hpp.swp  .MapClosures.cpp.swo  .MapClosures.hpp.swo  .MapClosures.hpp.swp  MapClosures.cpp  MapClosures.hpp
python/: cloud_processing.py  convert_ply_to_pcd.py  data_loader.py  load_pcd.py  main.py  normals.py  pokus_ground_removal.py  pokus_planar.py  requirements.txt
src/: .DataLoader.cpp.swp  .DataLoader.hpp.swp  .main.cpp.swp  DataLoader.cpp  DataLoader.hpp  main.cpp
